--- a/src/components/home/Services.css
+++ b/src/components/home/Services.css
@@ -1,7 +1,8 @@
 /*  OUR SERVICES SECTION  */
 .services-section {
   background: #fff;
-  padding: 60px 0;
+  padding: 50px 0;
+  margin-top: -50px;
   font-family: "Outfit", sans-serif;
 }
 
@@ -103,10 +104,13 @@
 @media (max-width: 576px) {
   .services-section {
     padding: 40px 15px;
+    margin-top: -90px;
+  
   }
 
   .section-title {
     font-size: 24px;
+    margin-right: 30px;
   }
 
   .service-title {
