--- a/src/components/home/Testimonials.css
+++ b/src/components/home/Testimonials.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
    margin-top: -90px;
+   margin-bottom:-40px;
 }
 
 .testimonials-wrapper {
@@ -129,5 +130,97 @@
 
   .testimonial-card p {
     font-size: 15px;
+  }
+}
+
+.testimonial-swiper .swiper-slide {
+  height: auto !important;
+  display: flex !important;
+}
+
+.testimonial-card {
+  flex: 1; /* forces equal height */
+}
+
+.testimonial-card p {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;  /* number of visible lines */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  position: relative;
+}
+
+.testimonial-card p::after {
+  color: #caa600;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.modal-backdrop-custom {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.55);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.modal-box {
+  background: #fff;
+  padding: 30px;
+  width: 90%;
+  max-width: 450px;
+  border-radius: 14px;
+  animation: modalPop 0.25s ease-out;
+}
+
+@keyframes modalPop {
+  0% { transform: scale(0.85); opacity: 0; }
+  100% { transform: scale(1); opacity: 1; }
+}
+
+.read-more {
+  cursor: pointer;
+}
+
+/* MODAL OVERLAY */
+.testimonial-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(2px);
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  z-index: 9999;
+}
+
+/* MODAL BOX */
+.testimonial-modal {
+  background: #fff;
+  width: 90%;
+  max-width: 600px;
+  border-radius: 16px 16px 0 0;
+  padding: 30px;
+  animation: slideUp 0.45s ease forwards;
+}
+
+/* SLIDE UP ANIMATION */
+@keyframes slideUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
