--- a/src/components/careers/CareersSections.css
+++ b/src/components/careers/CareersSections.css
@@ -134,7 +134,7 @@ label {
 .choose-btn {
   background-color: #000;
   font-size: 12px;
-  padding: 10px 18px;
+  padding: 8px 14px;
   border-radius: 4px;
 }
 
@@ -163,8 +163,9 @@ textarea {
   background-color: #000;
   color: #fff;
   font-size: 12px;
-  padding: 8px 14px;
-  border-radius: 4px;
+  padding: 6px 16px;
+  margin: 6px;
+  border-radius: 2px;
   border: none;
   cursor: pointer;
   transition: 0.3s;
@@ -200,7 +201,7 @@ textarea {
 
 /* Keep reCAPTCHA left */
 .recaptcha-submit-row .g-recaptcha {
-  transform: scale(0.95);     /* optional small shrink */
+  transform: scale(0.95);     
   transform-origin: left;
 }
 
@@ -226,11 +227,10 @@ textarea {
 .file-area {
   flex: none;
   width: 85% !important;
+
 }
 
-/* --------------------------- */
-/* FULL RESPONSIVENESS FIXES   */
-/* --------------------------- */
+
 
 /* For tablets & small desktops */
 @media (max-width: 992px) {
@@ -334,4 +334,25 @@ textarea {
   textarea {
     width: 100% !important;
   }
+}
+
+/* Hide default file input text */
+.file-area::-webkit-file-upload-button {
+  visibility: hidden;
+}
+
+.file-area::before {
+  content: "";
+}
+
+.file-area {
+  color: transparent !important;
+}
+
+.file-area::-webkit-file-upload-button {
+  color: transparent !important;
+}
+
+.file-area:focus {
+  outline: none !important;
 }
